# hmake

./: .gitignore  README.md  hmake.cabal
.github/workflows/: test.yaml
app/: Main.hs
app/Makefile/: Parser.hs
app/Makefile/Parser/: Internal.hs
src/Makefile/: Parser.hs
src/Makefile/Parser/: Internal.hs
test/: Spec.hs
test/Makefile/: ParserSpec.hs
